--- a/webify/filters/img.mustache
+++ b/webify/filters/img.mustache
@@ -1,1 +1,8 @@
-<figure class="figure"><img src="{{file}}" class="figure-img img-fluid rounded img-responsive" alt="{{caption}}"><figcaption class="figure-caption">{{caption}}</figcaption></figure>
+<div class="row">
+<div class="col-lg-12">
+<figure class="figure">
+<a href="{{file}}"><img class="img-responsive" width="100%" src="{{file}}" alt="{{caption}}"></a>
+{{#caption}}<figcaption class="figure-caption">{{caption}}</figcaption>{{/caption}}
+</figure>
+</div>
+</div>
