--- a/manual/_templates/img.mustache
+++ b/manual/_templates/img.mustache
@@ -1,7 +1,7 @@
 <div class="row">
 <div class="col-lg-12 text-center">
 <figure class="figure">
-<a href="{{file}}"><img class="img-responsive" width="50%" src="{{file}}" alt="{{caption}}"></a>
+<a href="{{file}}"><img class="img-fluid" src="{{file}}" alt="{{caption}}"></a>
 {{#caption}}<figcaption class="figure-caption">{{caption}}</figcaption>{{/caption}}
 </figure>
 </div>
